--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bibtex-parse-js": "0.0.24",
     "citation-js": "^0.6.8",
     "gsap": "^3.11.5",
+    "jstoxml": "^3.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gsap": "^3.2.1",
