--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "bibtex": "^0.9.0",
     "bibtex-parse-js": "0.0.24",
+    "chevrotain": "^10.5.0",
     "citation-js": "^0.6.8",
     "gsap": "^3.11.5",
     "jstoxml": "^3.2.7",
