--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-gsap": "^3.2.1",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
