--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@citation-js/core": "^0.6.8",
+    "@citation-js/plugin-enw": "^0.1.1",
+    "@citation-js/plugin-refworks": "^0.1.2",
+    "@citation-js/plugin-ris": "^0.6.8",
     "@devisle/reference-js": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
